@@ -1,5 +1,6 @@
 0.17.0
 	new feature: file attachments (by Aaron)
+	new feature: IPv4 tree expand/collapse switch
 	update: display row name when listing objects. closes ticket 16 (by Aaron)
 	update: ability to manage rows from the Rackspace page in addition to the Dictionary (by Aaron)
 	update: IPv4 calculations were optimized for better speed
@@ -7,10 +8,10 @@
 	update: add network security chapter and dictionary entries.  closes ticket 148 (by Aaron)
 	update: add HP and Juniper dictionary entries.  closes tickets 145 and 165 (by Aaron)
 	update: combined two forms on object properties page into one.  closes tickets 36 and 87 (by Aaron)
+	update: resolved performance issue for systems with many L2 ports
+	update: enable username handling in Cisco switch connector
 	bugfix: show error message if snmp module isn't loaded.  closes ticket 43 (by Aaron)
 	bugfix: show error message for duplicate IPv4 network record
-	update: enable username handling in Cisco switch connector
-	new feature: IPv4 tree expand/collapse switch
 0.16.4 2008-11-04
 	bugfix: display VS/RS config block in RS pool view
 	bugfix: resolve tabindex issues in many forms
